--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "duffel-visor",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "author": "Michael Robinson <mike@pagesofinterest.net>",
   "description": "Provides a visor visible when a user with permissions to access any visor item is logged in",
   "contributors": [
@@ -9,6 +9,10 @@
       "email": "mike@pagesofinterest.net"
     }
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/BrownPaperBag/duffel-visor"
+  },
   "dependencies": {
     "nunjucks": "git://github.com/jlongster/nunjucks.git#master",
     "underscore": "1.5.x"
